10) goahead: webui: rearrange some parametrs (more consistent).<br>
11) goahead: fix apply netfilter rules in some situations.<br>
12) goahead: fix redirect submit-url issue (may be crash or not correct redirects).<br>
13) goahead: fix selected STA disconnect for dual band in connected client list.<br>
14) goahead: fix green ap mode in WebUI.<br>
15) goahead: fix channel autoselect for 5GHz.<br>
16) goahead: add support AC modes in connected client list.<br>
17) goahead: add band 2.4/5GHz highlighting in connected client list.<br>
18) goahead: add 5GHz band network mode/name parametrs.<br>
19) goahead: add 5GHz band network central channel parametr.<br>
20) goahead: add VHT mode parametrs for AC module in WebUI.<br>
21) kernel: ralink arch: add support SD/MMC driver for MT7620/MT7621/MT7628.<br>
22) kernel: net: skb_share_check() should use consume_skb().<br>
23) kernel: mips: irq: fix disable_irq on CPU IRQs.<br>
24) kernel: mips: fix restart of indirect syscalls.<br>
25) kernel: mips: fix kernel lockup or crash after CPU offline/online.<br>
26) kernel: mips: remove race window in page fault handling.<br>
<br>
<br>
<b>2.3.x</b><br>
1) kernel: up to 3.4.106 version.<br>
2) kernel: ralink_wifi: up 7610 driver to 3.0.0.8 version.<br>
3) kernel: mips: allow MIPS_CPU_SCACHE to be used with different line sizes.<br>
4) kernel: mips: smp-mt,smp-cmp: Enable all HW IRQs on secondary CPUs.<br>
5) kernel: mips: mt: proc: Add support for printing VPE and TC ids.<br>
6) kernel: pci: fix P2P bridge I/O port window sign extension.<br>
7) kernel: pci/portdrv: Remove warning about invalid IRQ for hot-added PCIe ports.<br>
8) dropbear: up to 2015.67 version.<br>
9) goahead: do not set FixedTxMode if MCS not limited/auto.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>