@@ -131,11 +131,11 @@ HT_STBC=1
 HT_RxStream=2
 HT_TxStream=2
 VHT_BW=1
-VHT_BW_SIGNAL=0
+VHT_BW_SIGNAL=2
 VHT_DisallowNonVHT=0
 VHT_LDPC=1
 VHT_SGI=1
-VHT_STBC=1
+VHT_STBC=0
 hw_nat_bind=50
 hw_nat_wifi=1
 hw_nat_udp=1
